<resources>
    <!-- main -->
    <string name="app_name">Explorer\'s Buddy</string>
    <string name="logo_description">black compass logo</string>
    <string name="enter_button">Begin</string>
    <string name="landing_message">The perfect tool to plan your trip and share with friends</string>
    <string name="vacation_planner">Vacation Planner</string>

    <!-- login -->
    <string name="login_welcome">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_pw">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register_button">Sign Up</string>
    <string name="login_register_message">Don\'t have an account?</string>

    <!-- register -->
    <string name="register_welcome">Sign Up</string>
    <string name="register_register_button">Register</string>
    <string name="register_username">Username</string>
    <string name="register_pw">Password</string>
    <string name="register_confirm_pw">Confirm Password</string>

    <!-- report -->
    <string name="vacation_report_title">Vacation Report</string>
    <string name="report_subtitle">All vacations overview</string>
    <string name="report_icon">Report icon</string>
    <string name="no_data">No data available</string>
    <string name="no_report_data">No Report Data</string>
    <string name="no_report_message">There is no vacation data available to display. Add some vacations to generate a report.</string>
    <string name="dl_button">Download Report</string>

    <!-- vacation details -->
    <string name="vacation_title">Vacation Title</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="vacation_start">Start Date</string>
    <string name="vacation_end">End Date</string>
    <string name="vacation_associated_ex">Associated Excursions</string>
    <string name="add_ex_button">Add Excursion</string>

    <!-- excursion details -->
    <string name="excursion_details">My Excursion</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_date">Start Date</string>

    <!-- vacation list -->
    <string name="vl_add_button">Add Vacation</string>
    <string name="vl_report_button">Create Report</string>
    <string name="vl_search_hint">Search Vacations…</string>

    <!-- excursion list item -->
    <string name="excursion_li_name">Excursion Title:</string>
    <string name="excursion_li_date">Date</string>

    <!-- vacation list item -->
    <string name="vacation_li_name">Vacation Title:</string>
    <string name="vacation_li_start">Start Date</string>
    <string name="vacation_li_date_separator">-</string>
    <string name="vacation_li_end">End Date</string>

    <!-- menu items -->
    <string name="vacation_save_menu_item">Save Vacation</string>
    <string name="vacation_delete_menu_item">Delete Vacation</string>
    <string name="add_sample_menu_item">Add Sample Vacations</string>
    <string name="vacation_notify_menu_item">Notify</string>
    <string name="vacation_share_menu_item">Share</string>
    <string name="excursion_save_menu_item">Save Excursion</string>
    <string name="excursion_delete_menu_item">Delete Excursion</string>
    <string name="excursion_notify_menu_item">Notify</string>


</resources>